--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ header h1{
   padding: 10px;
 
 }
-
+/*navigation bar*/
 nav{
   display: flex;
   flex-grow: 1;
@@ -70,11 +70,6 @@ nav a{
   
 }
 
-.page-section h2{
-}
-.page-section .content{
-}
-
 
 .contact .content{
   display: flex;
@@ -82,7 +77,7 @@ nav a{
   gap:20px;
  
 }
-/* work */
+/* work section right hand side */
 #work .content {
  display: flex;
  flex-wrap: wrap;
@@ -91,9 +86,37 @@ nav a{
 .picture{
   flex-grow: 1;
   background-color: brown;
-}
+ height: 100px;
 
+}
+/* putting picture across the top*/
 .topone {
   flex-grow: 1;
   flex-basis: 100%;
 }
+/*putting images on for each project*/
+#portfolio-1{
+background-image: url(..//images/02-portfolio-1.jpg);
+}
+#portfolio-2{
+  background-image: url(../images/02-portfolio-2.jpg);
+
+}
+#portfolio-3{
+  background-image: url(../images/02-portfolio-3.jpg);
+
+}
+#portfolio-4{
+  background-image: url(../images/02-portfolio-4.jpg);
+
+}
+#run-buddy{
+  background-image: url(../images/02-run-buddy.jpg);
+
+}
+/* adding media query to view for phone*/
+@media only screen and (max-width: 600px) {
+  .page-section {
+    display: block;
+  }
+} 
